<?xml version="1.0" encoding="utf-8"?>

<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TableRow
		android:id="@+id/sensor_name_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_name_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_name_label"
		/>
		<TextView
			android:id="@+id/sensor_name_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_type_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_type_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_type_label"
		/>
		<TextView
			android:id="@+id/sensor_type_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_power_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_power_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_power_label"
			/>
		<TextView
			android:id="@+id/sensor_power_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_resolution_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_resolution_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_resolution_label"
			/>
		<TextView
			android:id="@+id/sensor_resolution_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_vendor_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_vendor_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_vendor_label"
			/>
		<TextView
			android:id="@+id/sensor_vendor_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_version_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_version_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_version_label"
			/>
		<TextView
			android:id="@+id/sensor_version_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_max_range_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_max_range_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_max_range_label"
			/>
		<TextView
			android:id="@+id/sensor_max_range_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_min_delay_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_min_delay_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_min_delay_label"
			/>
		<TextView
			android:id="@+id/sensor_min_delay_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_accuracy_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_accuracy_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_accuracy_label"
			/>
		<TextView
			android:id="@+id/sensor_accuracy_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_value1_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_value1_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_value1_label"
			/>
		<TextView
			android:id="@+id/sensor_value1_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_value2_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_value2_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_value2_label"
			/>
		<TextView
			android:id="@+id/sensor_value2_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>

	<TableRow
		android:id="@+id/sensor_value3_row"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TextView
			android:id="@+id/sensor_value3_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sensor_value3_label"
			/>
		<TextView
			android:id="@+id/sensor_value3_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</TableRow>
</TableLayout>